syntax = "proto3";

option go_package = "./;protobuf";
package protobuf;

message ContactUpdate {
  uint64 clock = 1;
  string ens_name = 2;
  string profile_image = 3;
}
